annimate_core/tests/snapshots/exportable_edge_types__no_corpora.snap
---
source: annimate_core/tests/exportable_edge_types.rs
info:
  corpus_paths: []
  corpus_names: []
---
[]
