annimate_core/tests/snapshots/exportable_edge_types__parallel.snap
---
source: annimate_core/tests/exportable_edge_types.rs
info:
  corpus_paths:
    - parallel.sample_relANNIS.zip
  corpus_names:
    - parallel.sample
---
[
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Pointing,
            name: "align_e-g",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "type",
                    ns: "align",
                },
                display_name: "type",
            },
        ],
    },
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Pointing,
            name: "align_g-e",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "type",
                    ns: "align",
                },
                display_name: "type",
            },
        ],
    },
]
