annimate_core/tests/snapshots/exportable_edge_types__pcc2.snap
---
source: annimate_core/tests/exportable_edge_types.rs
info:
  corpus_paths:
    - pcc2_v7_relANNIS.zip
  corpus_names:
    - pcc2
---
[
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Dominance,
            name: "",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "func",
                    ns: "tiger",
                },
                display_name: "func",
            },
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "relname",
                    ns: "rst",
                },
                display_name: "relname",
            },
        ],
    },
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Dominance,
            name: "edge",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "func",
                    ns: "tiger",
                },
                display_name: "func",
            },
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "relname",
                    ns: "rst",
                },
                display_name: "relname",
            },
        ],
    },
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Dominance,
            name: "multinuc",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "relname",
                    ns: "rst",
                },
                display_name: "relname",
            },
        ],
    },
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Dominance,
            name: "rst",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "relname",
                    ns: "rst",
                },
                display_name: "relname",
            },
        ],
    },
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Dominance,
            name: "secedge",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "func",
                    ns: "tiger",
                },
                display_name: "func",
            },
        ],
    },
    ExportableEdgeType {
        edge_type: EdgeType {
            ctype: Pointing,
            name: "dep",
        },
        anno_keys: [
            ExportableAnnoKey {
                anno_key: AnnoKey {
                    name: "func",
                    ns: "dep",
                },
                display_name: "func",
            },
        ],
    },
]
